WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218429
[GraphicsLayerTextureMapper] reflection masks aren't applied
https://bugs.webkit.org/show_bug.cgi?id=218429
Summary
[GraphicsLayerTextureMapper] reflection masks aren't applied
Fujii Hironori
Reported
2020-11-01 20:35:55 PST
Created
attachment 412878
[details]
test case [TextureMapper] reflection masks aren't applied
Attachments
test case
(380 bytes, text/html)
2020-11-01 20:35 PST
,
Fujii Hironori
no flags
Details
Patch
(2.00 KB, patch)
2020-11-05 16:57 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-11-05 16:57:00 PST
Created
attachment 413375
[details]
Patch
Fujii Hironori
Comment 2
2020-11-05 17:01:56 PST
***
Bug 218273
has been marked as a duplicate of this bug. ***
Fujii Hironori
Comment 3
2020-11-08 11:49:54 PST
Comment on
attachment 413375
[details]
Patch Clearing flags on attachment: 413375 Committed
r269569
: <
https://trac.webkit.org/changeset/269569
>
Fujii Hironori
Comment 4
2020-11-08 11:49:57 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-11-08 11:50:19 PST
<
rdar://problem/71167872
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug