[GraphicsLayerTextureMapper] reflection masks aren't applied https://bugs.webkit.org/show_bug.cgi?id=218429

Reviewed by Don Olmstead.

The backing store of the mask layer of replica layers aren't
updated at all since r178111.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::updateBackingStoreIncludingSubLayers):
Use updateBackingStoreIncludingSubLayers for the replica layer to
update backing stores recursively instead of updating only one
layer by using updateBackingStoreIfNeeded.

Canonical link: https://commits.webkit.org/231360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269569 268f45cc-cd09-0410-ab3c-d52691b4dbfc