Source/WebCore/platform/graphics/texmap/GraphicsLayerTextureMapper.cpp
@@ -536,7 +536,7 @@ void GraphicsLayerTextureMapper::updateBackingStoreIncludingSubLayers()
     if (maskLayer())
         downcast<GraphicsLayerTextureMapper>(*maskLayer()).updateBackingStoreIfNeeded();
     if (replicaLayer())
-        downcast<GraphicsLayerTextureMapper>(*replicaLayer()).updateBackingStoreIfNeeded();
+        downcast<GraphicsLayerTextureMapper>(*replicaLayer()).updateBackingStoreIncludingSubLayers();
     for (auto& child : children())
         downcast<GraphicsLayerTextureMapper>(child.get()).updateBackingStoreIncludingSubLayers();
 }
